# ptprun

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
src/ptprun/: __init__.py  coloring.py  distillation.py  extraction.py  losses.py  orbit.py  orbitalization.py  vis.py
tests/: test_distillation.py  test_extraction.py  test_losses_fpops_orbitalized.py  test_losses_fpops_unorbitalized.py  test_losses_noise_to_signal_ratio.py  test_orbitalization.py
tests/sample_dags/: __init__.py  dag1.py  dag1_legacy.py  dag2.py  dag2_legacy.py  dag3.py  dag4.py  dag5.py  dag6.py  dag6_legacy.py
tests/sample_models/: __init__.py  alexnet_models.py  resnet_models.py
